# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: information.cpp  main.cpp
test/: sanity_test.cpp
